--- a/src/com/eslint/ESLintBundle.properties
+++ b/src/com/eslint/ESLintBundle.properties
@@ -7,11 +7,16 @@ unused.property.suppress.for.file=Suppress for file
 eslint.inspection.group.name=Code quality tools
 eslint.inspection.undefined.step.name=Undefined step
 eslint.inspection.undefined.step.msg.name=Undefined step reference:
-eslint.property.inspection.display.name=ESLint Warning
-eslint.property.inspection.message=ESLint: {0} {1}
+eslint.property.inspection.display.name=ESLint
+eslint.property.inspection.message=ESLint: {0} ({1})
 
 eslint.rules.dir.does.not.exist=Rules directory not found. Path {0} not found in project
 eslint.rules.dir.is.not.a.dir=Rules path is not a directory. Path {0} not found in project
+
+eslint.directory.does.not.exist={0} directory not found. Path {1} not found in project
+eslint.directory.is.not.a.dir={0} path is not a directory. Path {1} not found in project
+eslint.file.does.not.exist={0} file not found. Path {1} not found in project
+eslint.file.is.not.a.file={0} path is not a file. Path {1} not found in project
 
 inspection.fix.strict=Add 'use strict' statement
 inspection.fix.no.new.object=Convert to {}
