--- a/src/com/eslint/ESLintBundle.properties
+++ b/src/com/eslint/ESLintBundle.properties
@@ -22,6 +22,8 @@ inspection.fix.strict=Add 'use strict' statement
 inspection.fix.no.new.object=Convert to {}
 inspection.fix.no-array-constructor=Convert to []
 inspection.fix.eqeqeq=Convert to ===
+inspection.fix.no-lonely-if=Convert to else if
+inspection.fix.no-negated-in-lhs=Wrap with parenthesis
 
 
 properties.files.inspection.group.display.name=ESLint
