add fix for dot-notation rule

--- a/src/com/eslint/ESLintBundle.properties
+++ b/src/com/eslint/ESLintBundle.properties
@@ -24,6 +24,7 @@ inspection.fix.no-array-constructor=Convert to []
 inspection.fix.eqeqeq=Convert to ===
 inspection.fix.no-lonely-if=Convert to else if
 inspection.fix.no-negated-in-lhs=Wrap with parenthesis
+inspection.fix.dot-notation=Convert to dot notation
 
 
 properties.files.inspection.group.display.name=ESLint
