--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
     <id>com.wix.eslint</id>
     <name>ESLint</name>
-    <version>1.0.14</version>
+    <version>1.0.15</version>
     <vendor email="sir_simon_x@yahoo.com" url="https://github.com/idok/eslint-plugin">Ido</vendor>
     <category>HTML/JavaScript Development</category>
     <description><![CDATA[
@@ -17,7 +17,8 @@
     <depends>JavaScript</depends>
 
     <change-notes><![CDATA[
-       <p>1.0.14</p>
+       <p>1.0.15</p>
+       <p>1.0.14 fix eslintrc configuration in settings</p>
        <p>1.0.13 bug fix</p>
        <p>1.0.12 bug fix related to relative path of eslint</p>
        <p>1.0.11 bug fixes, add quick fix to DotNotation rule</p>
