Switch to the IDE process handlers rather than direct use of java Runtime API.
Removed several System.out and log statements that would affect performance when processing large numbers of files.

Commented out several items in plugins.xml that there were no classes for to all plugin launch configuration to succeed.

I'm still not having any luck executing the test files.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -53,13 +53,13 @@
                          implementationClass="com.eslint.ESLintInspection"
                          displayName="ESLint" groupKey="eslint.inspection.group.name"/>
         <!--unfair="true" runForWholeFile="true" level="WARNING" -->
-        <externalAnnotator language="JavaScript" implementationClass="com.eslint.ESLintExternalAnnotator" />
+        <!--<externalAnnotator language="JavaScript" implementationClass="com.eslint.ESLintExternalAnnotator" />-->
 
         <!-- annotate .eslintrc -->
         <projectService serviceImplementation="com.eslint.config.ESLintConfigFileChangeTracker"/>
         <fileTypeFactory implementation="com.eslint.config.ESLintConfigFileTypeFactory"/>
-        <completion.contributor order="first" language="JavaScript" implementationClass="com.eslint.config.ESLintConfigCompletionContributor"/>
-        <annotator language="JSON" implementationClass="com.eslint.config.ESLintConfigFileAnnotator"/>
+        <!--<completion.contributor order="first" language="JavaScript" implementationClass="com.eslint.config.ESLintConfigCompletionContributor"/>-->
+        <!--<annotator language="JSON" implementationClass="com.eslint.config.ESLintConfigFileAnnotator"/>-->
 
         <!--<lang.documentationProvider language="JSON" implementationClass="com.eslint.config.ESLintConfigDocumentationProvider"/>-->
         <!--<psi.referenceContributor language="JSON" implementation="com.eslint.config.ESLintConfigReferenceContributor"/>-->
