add config setting for builtin rules dir for eslintrc support

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -56,13 +56,10 @@
         <externalAnnotator language="JavaScript" implementationClass="com.eslint.ESLintExternalAnnotator" />
 
         <!-- annotate .eslintrc -->
-        <projectService serviceImplementation="com.eslint.config.ESLintConfigFileChangeTracker"/>
+        <projectService serviceImplementation="com.eslint.config.ESLintConfigFileListener"/>
         <fileTypeFactory implementation="com.eslint.config.ESLintConfigFileTypeFactory"/>
         <completion.contributor order="first" language="JavaScript" implementationClass="com.eslint.config.ESLintConfigCompletionContributor"/>
-        <annotator language="JSON" implementationClass="com.eslint.config.ESLintConfigFileAnnotator"/>
-
-        <!--<lang.documentationProvider language="JSON" implementationClass="com.eslint.config.ESLintConfigDocumentationProvider"/>-->
-        <!--<psi.referenceContributor language="JSON" implementation="com.eslint.config.ESLintConfigReferenceContributor"/>-->
+        <annotator language="JSON" implementationClass="com.eslint.config.ESLintConfigAnnotator"/>
     </extensions>
 
     <application-components>
