--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2" url="https://github.com/idok/eslint-plugin">
     <id>com.wix.eslint</id>
     <name>ESLint</name>
-    <version>1.0.27</version>
+    <version>1.0.28</version>
     <vendor email="sir_simon_x@yahoo.com" url="https://github.com/idok/eslint-plugin">Ido</vendor>
     <category>HTML/JavaScript Development</category>
     <description><![CDATA[
@@ -13,6 +13,7 @@
     ]]></description>
 
     <change-notes><![CDATA[
+       <p>1.0.28 Fix default settings, support rc files with extensions, bug fixes</p>
        <p>1.0.27 Bug fixes</p>
        <p>1.0.26 Bug fixes</p>
        <p>1.0.25 Add --ext. Bug fixes</p>
@@ -42,7 +43,7 @@
     <depends>com.intellij.modules.lang</depends>
     <!--<depends>com.intellij.modules.platform</depends>-->
     <depends>JavaScript</depends>
-    <depends>org.jetbrains.plugins.yaml</depends>
+    <depends optional="true" config-file="config.xml">org.jetbrains.plugins.yaml</depends>
 
     <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
     <idea-version since-build="139"/>
@@ -69,7 +70,6 @@
         <projectService serviceImplementation="com.eslint.config.ESLintConfigFileListener"/>
         <fileTypeFactory implementation="com.eslint.config.ESLintConfigFileTypeFactory"/>
 
-        <!--<fileTypeDetector implementation="com.eslint.config.ESLintConfigFileTypeDetector" />-->
         <completion.contributor order="first" language="JavaScript" implementationClass="com.eslint.config.ESLintConfigCompletionContributor"/>
         <annotator language="JSON" implementationClass="com.eslint.config.ESLintConfigAnnotator"/>
     </extensions>
